# CodexRunarum

./: .gitignore  makefile  poetry.toml  pyproject.toml  readme.md
codexrunarum/: __main__.py  interface.py
codexrunarum/core/: engine.py
codexrunarum/core/elements/: __init__.py  base.py  fire.py  stone.py  tree.py  void.py  water.py
codexrunarum/core/elements/fluid/: __init__.py  base.py  water.py
codexrunarum/core/elements/solid/: __init__.py  base.py  rock.py  tree.py
codexrunarum/core/elements/spread/: __init__.py  base.py  fire.py
codexrunarum/examples/: _firegun.py  base.py  chaos.py  fire.py  fire_storm.py  fireclock.py  flood.py  forest_fire.py  stones.py  tree.py  water-change-dir.py  water.py
codexrunarum/interface/: game.py
