[tool.poetry]
name = "codexrunarum"
version = "0.1.0"
description = "an infinitely variable magic system for computer games powered by cellular automata"
authors = ["Anton Kudryavtsev <antonkudryavtsevdoem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
