[tool.poetry]
name = "codexrunarum"
version = "0.1.0"
description = "an infinitely variable magic system for computer games powered by cellular automata"
authors = ["Anton Kudryavtsev <antonkudryavtsevdoem@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"
numpy = "^1.26.4"
icecream = "^2.1.3"
termcolor = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".mypy_cache", ".ruff_cache", ".venv", "venv", "build", "dist"]
line-length = 88
indent-width = 4
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "Q", "B", "I", "UP", "C"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
"**/alembic/versions/*" = ["I001", "UP035", "UP007", "F401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
